fix: make ui visibility button hide progress bar

--- a/packages/tv-ui/src/components/slide/ActionButtons/ActionButtons.css
+++ b/packages/tv-ui/src/components/slide/ActionButtons/ActionButtons.css
@@ -1,6 +1,6 @@
 .ActionButtons {
   position: absolute;
-  bottom: calc(3em + var(--y-dynamic-diff));
+  bottom: var(--y-dynamic-diff);
   padding-top: var(--safe-inset-top);
   padding-right: var(--safe-inset-right);
   right: 3px;
